added photo gallery and custom plan